--- a/java/pom.xml
+++ b/java/pom.xml
@@ -58,6 +58,18 @@
             <version>2.0.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.progruzovik.bus</groupId>
+            <artifactId>bus-datasource-spring-jdbc</artifactId>
+            <version>1.0-DEAN</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.progruzovik.bus</groupId>
+            <artifactId>bus-messaging-spring-rest</artifactId>
+            <version>1.0-DEAN</version>
+        </dependency>
+
     </dependencies>
 
     <build>
