--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:~/h2/dean
+spring.datasource.url=jdbc:h2:mem:
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
