--- a/deanery-ivbo-02-15-1/package.json
+++ b/deanery-ivbo-02-15-1/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "express": "^4.16.4",
+    "node-fetch": "^2.3.0",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
